# VKGIFSBot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  backendtools.py  bot.py  config.py  db.py  docker-compose.yml  pyproject.toml  requirements.txt  vktools.py
db/: configs.db
migrations/: env.py
migrations/versions/: 2024-03-27_04-17_98354c7da0c1.py
src/: __init__.py  config.py  exceptions.py  main.py  models.py  protocol.py  utils.py
src/db/: __init__.py  base.py  connection.py
src/users/: controllers.py  models.py  views.py
src/vkconnect/: controllers.py  models.py  views.py
static/: CatchVKToken.html
